# MPI-tasks

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  OMP-tasks.cbp  cmake_install.cmake
mpi/: launcherMPI.cpp  taskMPI1.cpp  taskMPI1.h  taskMPI10.cpp  taskMPI10.h  taskMPI11.cpp  taskMPI11.h  taskMPI2.cpp  taskMPI2.h  taskMPI3.cpp  taskMPI3.h  taskMPI4.cpp  taskMPI4.h  taskMPI5.cpp  taskMPI5.h  taskMPI6.cpp  taskMPI6.h  taskMPI7.cpp  taskMPI7.h  taskMPI8.cpp  taskMPI8.h  taskMPI9.cpp  taskMPI9.h
omp/: launcher.cpp  main.cpp  task1.cpp  task1.h  task10.cpp  task10.h  task11.cpp  task11.h  task12.cpp  task12.h  task13.cpp  task13.h  task2.cpp  task2.h  task3.cpp  task3.h  task4.cpp  task4.h  task5.cpp  task5.h  task6.cpp  task6.h  task7.cpp  task7.h  task8.cpp  task8.h  task9.cpp  task9.h
